<resources>
    <string name="app_name">4U-Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register_short">Register</string>
    <string name="welcome4UMessage">Welcome to 4U</string>
    <string name="createAccountMessage">Create an Account</string>
    <string name="studentNumber">Student Number</string>
    <string name="username">Create a Username</string>
    <string name="reenterPassword">Re-enter Password</string>
    <string name="schoolEmail">School Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
